Fixed selected providers visibilty

--- a/src/style/components/_provider_card.sass
+++ b/src/style/components/_provider_card.sass
@@ -8,7 +8,7 @@
     &-card
         @apply outline outline-1 outline-gray-300 rounded-full text-center cursor-pointer transition-transform duration-200 flex items-center justify-center
         &.selected
-            @apply outline-blue-500 outline-2 transform scale-110
+            @apply outline-blue-500 outline-4 transform scale-110
 
     &-logo-container
         @apply w-16 h-16 flex items-center justify-center overflow-hidden rounded-full
